--- a/Boids.csproj
+++ b/Boids.csproj
@@ -27,6 +27,12 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.*" />
     <PackageReference Include="Myra" Version="1.5.9" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Content\stylesheets\ui_stylesheet.xmms"/>
+    <EmbeddedResource Include="Content\stylesheets\ui_stylesheet_atlas.png"/>
+    <EmbeddedResource Include="Content\stylesheets\ui_stylesheet.xmat"/>
+    <EmbeddedResource Include="Content\stylesheets\ui_font.fnt"/>
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="CollectPackageReferences">
     <Message Text="Restoring dotnet tools (this might take a while depending on your internet speed and should only happen upon building your project for the first time, or after upgrading MonoGame, or clearing your nuget cache)" Importance="High" />
     <Exec Command="dotnet tool restore" />
