--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ UI/
 # ── OS cruft ─────────────────────────────────────────
 .DS_Store
 Thumbs.db
+
+# ── Some specific files ─────────────────────────────────────────
+CLAUDE.md
